# voxblox_ros_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  test.cpp
data/: save_pickle_msg.py
example/: basic.c  basic.py  client.py  debug.cpp  successful.cpp
include/: map_manager.hpp
python/: .gitignore
python/voxblox_ros_python/: .gitignore  __init__.py
src/: c_api.cpp  c_api.h  map_manager.cpp  map_manager.hpp  python_wrap.c
test/: basic.c  basic.cpp  basic.py  client_node.py  debug.cpp
